# Deskrona-Time-Tracking-Software

./: .gitignore  API.md  CLAUDE.md  LICENSE  README.md  changelog.md  do_release.ps1  index.html  package-lock.json  package.json  project.md  release.md  todo.md
.agents/workflows/: read-always.md
docs/: index.html  llms.txt  robots.txt  sitemap.xml
docs/assets/: index-B0m-2fVo.js  index-BJeTCdLW.js  index-BOKXDDC6.js  index-DHQmDw34.js  styles-Ct_XGD1K.css
public/: break_overlay.html  overlay-handle.html  overlay.html
src/: App.vue  i18n.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_config.rs  auth.rs  backup.rs  break_reminder.rs  config.rs  db.rs  lib.rs  main.rs  tracking.rs
src/types/: api.ts
src/utils/: apiProxy.ts  apiService.ts  dataSync.ts
